Updated text and links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <header>
         <div class="link">
-          <a href="mailto:mxk5025@rit.edu">Email</a>|
+          <a href="mailto:michael@khacoding.com">Email</a>|
           <a href="http://github.com/mxk5025">GitHub</a>|
           <a href="https://www.linkedin.com/in/michaelkha/">LinkedIn</a>|
           <a href="doc/resume.pdf">Resume</a>
@@ -28,14 +28,7 @@
         </p>
         <p>I am actively looking for an intern/co-op position involving software development for the 2019 summer.
         </p>
-        <p>Feel free to contact me via <a href="mailto:">email</a>.
-        </p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Accusantium architecto corporis ipsum minus nobis!
-          Ab architecto assumenda distinctio eius, explicabo fugit
-          laudantium maxime nisi perspiciatis porro quas reprehenderit veniam voluptates?
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus animi aperiam, architecto aspernatur at beatae consectetur debitis ducimus facilis illo labore nam, obcaecati optio soluta tenetur totam veniam voluptatibus! Asperiores?
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta eos esse libero nulla totam. Deserunt dicta distinctio, eveniet ex expedita, facilis id impedit provident quia repellendus reprehenderit sequi veritatis vero.
+        <p>Feel free to contact me via <a href="mailto:michael@khacoding.com">email</a>.
         </p>
       </div>
       <footer>
