Fixed link to style/css/style.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Home | Michael Kha</title>
     <meta name="description" content="Michael Kha, Student at Rochester Institute of Technology.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "css/style.css">
+    <link rel = "stylesheet" type = "text/css" href = "static/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
   </head>
   <body>
