--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <div class="content">
         <h1>Hey, I'm Michael Kha...</h1>
         <p>I am a student studying software engineering at <a href="http://www.rit.edu/">
-          Rochester Institute of Technology</a> in Rochester, NY. Currently I am interested learning HTML and
-          CSS on my own time to gain exposure with working on front-end development.
+          Rochester Institute of Technology</a> in Rochester, NY. I have experience working with Java and Python.
+          Currently I am interested learning HTML and CSS on my own time to gain exposure with working
+          on front-end development.
         </p>
         <p>Note that this site is still a work in progress.
         </p>
