Updating resume and text

--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
       <div class="content">
         <h1>Hey, I'm Michael Kha...</h1>
         <p>I am a student studying software engineering at <a href="http://www.rit.edu/">
-          Rochester Institute of Technology</a> in Rochester, NY. I have experience working with Java and Python.
+          Rochester Institute of Technology</a> in Rochester, NY. I am experienced working with Java and Python.
           Currently I am interested learning HTML and CSS on my own time to gain exposure with working
           on front-end development.
         </p>
         <p>Note that this site is still a work in progress.
         </p>
         <p>I am actively looking for an intern/co-op position involving software development for the 2019 summer.
+          More specifically in testing or back-end development in Java.
         </p>
         <p>Feel free to contact me via <a href="mailto:michael@khacoding.com">email</a>.
         </p>
       </div>
       <footer>
         <p>
-          © 2018 Michael Kha
+          © 2019 Michael Kha
         </p>
       </footer>
     </div>
