--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
         <p>Note that this site is still a work in progress.
         </p>
-        <p>I am actively looking for an intern/co-op position involving software development for the 2019 summer.
+        <p>I am actively looking for an intern/co-op position involving software development for the 2019 summer or fall.
           More specifically in testing or back-end development in Java.
         </p>
         <p>Feel free to contact me via <a href="mailto:michael@khacoding.com">email</a>.
