--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Home | Michael Kha</title>
+    <title>Michael Kha</title>
     <meta name="description" content="Michael Kha, Student at Rochester Institute of Technology.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style2.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="link">
-          <a href="mailto:michael@khacoding.com">Email</a>|
-          <a href="http://github.com/mxk5025">GitHub</a>|
-          <a href="https://www.linkedin.com/in/michaelkha/">LinkedIn</a>|
-          <a href="doc/resume.pdf">Resume</a>
-        </div>
-      </header>
+    <header>
+      <span><a href="index.html">KHACODING</a></span>
+      <nav>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="mailto:michael@khacoding.com">EMAIL</a></li>
+          <li><a href="http://github.com/mxk5025">GITHUB</a></li>
+          <li><a href="https://www.linkedin.com/in/michaelkha/">LINKEDIN</a></li>
+          <li><a href="doc/resume.pdf">RESUME</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section>
       <div class="content">
-        <h1>Hey, I'm Michael Kha...</h1>
+        <h1>Michael Kha</h1>
+        <h2>About</h2>
         <p>I am a student studying software engineering at <a href="http://www.rit.edu/">
           Rochester Institute of Technology</a> in Rochester, NY. I am experienced working with Java and Python.
           Currently I am interested learning HTML and CSS on my own time to gain exposure with working
           on front-end development.
-        </p>
-        <p>Note that this site is still a work in progress.
         </p>
         <p>I am actively looking for an intern/co-op position involving software development for the 2019 summer or fall.
           More specifically in testing or back-end development in Java.
@@ -33,11 +36,9 @@
         <p>Feel free to contact me via <a href="mailto:michael@khacoding.com">email</a>.
         </p>
       </div>
-      <footer>
-        <p>
-          © 2019 Michael Kha
-        </p>
-      </footer>
-    </div>
+    </section>
+    <footer>
+      &copy 2019 Michael Kha
+    </footer>
   </body>
 </html>
