Fixed links. Removed old files

--- a/sites/iste-140/functions.html
+++ b/sites/iste-140/functions.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <nav class="bar">
-                <a href="../index.html">Home</a>
+                <a href="../../index.html">Home</a>
                 <a href="index.html">Clean Code</a>
                 <a href="naming.html">Naming</a>
                 <a class="active" href="functions.html">Functions</a>
