Updated site. Work in-progress now

--- a/index.html
+++ b/index.html
@@ -24,14 +24,11 @@
     <section>
       <div class="content">
         <h1>Michael Kha</h1>
+        <h2>NOTE: I am currently in the process of redesigning my personal site.</h2>
         <h2>About</h2>
         <p>I am a student studying software engineering at <a href="http://www.rit.edu/">
           Rochester Institute of Technology</a> in Rochester, NY. I am experienced working with Java and Python.
-          Currently I am interested learning HTML and CSS on my own time to gain exposure with working
-          on front-end development.
-        </p>
-        <p>I am actively looking for an intern/co-op position involving software development for the 2019 summer or fall.
-          More specifically in testing or back-end development in Java.
+          Currently I am interested in learning artificial intelligence and more specifically, machine learning and computer vision.
         </p>
         <p>Feel free to contact me via <a href="mailto:michael@khacoding.com">email</a>.
         </p>
