--- a/index.html
+++ b/index.html
@@ -6,36 +6,26 @@
     <meta name="description" content="Michael Kha, Student at Rochester Institute of Technology.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <span><a href="index.html">KHACODING</a></span>
-      <nav>
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="mailto:michael@khacoding.com">EMAIL</a></li>
-          <li><a href="http://github.com/mxk5025">GITHUB</a></li>
-          <li><a href="https://www.linkedin.com/in/michaelkha/">LINKEDIN</a></li>
-          <li><a href="doc/resume.pdf">RESUME</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section>
-      <div class="content">
+    <div id="page-container">
+      <header>
         <h1>Michael Kha</h1>
-        <h2>NOTE: I am currently in the process of redesigning my personal site.</h2>
-        <h2>About</h2>
-        <p>I am a student studying software engineering at <a href="http://www.rit.edu/">
-          Rochester Institute of Technology</a> in Rochester, NY. I am experienced working with Java and Python.
-          Currently I am interested in learning artificial intelligence and more specifically, machine learning and computer vision.
-        </p>
-        <p>Feel free to contact me via <a href="mailto:michael@khacoding.com">email</a>.
-        </p>
+      </header>
+      <h2>Software Engineer</h2>
+      <div class="contact">
+        <h3>Contact</h3>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/michaelkha" rel="noopener noreferrer" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/mxk5025" rel="noopener noreferrer" target="_blank">GitHub</a></li>
+          <li><a href="static/files/resume.pdf" rel="noopener noreferrer" target="_blank">Resume</a></li>
+          <li><a href="mailto:mxk5025@rit.edu">Email</a></li>
+        </ul>
       </div>
-    </section>
-    <footer>
-      &copy 2019 Michael Kha
-    </footer>
+      <footer>
+        &copy 2020 Michael Kha
+      </footer>
+    </div>
   </body>
 </html>
