--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href="https://www.linkedin.com/in/michaelkha" rel="noopener noreferrer" target="_blank">LinkedIn</a></li>
           <li><a href="https://github.com/mxk5025" rel="noopener noreferrer" target="_blank">GitHub</a></li>
           <li><a href="static/files/resume.pdf" rel="noopener noreferrer" target="_blank">Resume</a></li>
-          <li><a href="mailto:mxk5025@rit.edu">Email</a></li>
+          <li><a href="mailto:contact@michael-kha.com">Email</a></li>
         </ul>
       </div>
       <footer>
