--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
       </div>
       <footer>
-        &copy 2020 Michael Kha
+        &copy; 2020 Michael Kha
       </footer>
     </div>
   </body>
