Make page loading even faster

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hello there, I'm Michael. I am a software engineer.">
-    <title>Michael Kha</title>
+    <title>michael-kha.com</title>
     <link rel="shortcut icon" type="image/jpg" href="static/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -26,19 +25,19 @@
         </div>
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/michaelkha" rel="noopener noreferrer" target="_blank"><i class="icon ion-logo-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/michaelkha" rel="noopener noreferrer" target="_blank"><span class="icon-linkedin"></span></a>
           </li>
           <li>
-            <a href="https://github.com/mxk5025" rel="noopener noreferrer" target="_blank"><i class="icon ion-logo-github"></i></a>
+            <a href="https://github.com/mxk5025" rel="noopener noreferrer" target="_blank"><span class="icon-github"></span></a>
           </li>
           <li>
-            <a href="https://medium.com/@mkha" rel="noopener noreferrer" target="_blank"><i class="icon ion-md-paper"></i></a>
+            <a href="https://medium.com/@mkha" rel="noopener noreferrer" target="_blank"><span class="icon-medium"></span></a>
           </li>
           <li>
-            <a href="https://michael-kha-site.s3.us-east-1.amazonaws.com/Michael_Kha_Resume.pdf" rel="noopener noreferrer" target="_blank"><i class="icon ion-md-business"></i></a>
+            <a href="https://michael-kha-site.s3.us-east-1.amazonaws.com/Michael_Kha_Resume.pdf" rel="noopener noreferrer" target="_blank"><span class="icon-profile"></span></a>
           </li>
           <li>
-            <a href="mailto:contact@michael-kha.com"><i class="icon ion-md-mail"></i></a>
+            <a href="mailto:contact@michael-kha.com"><span class="icon-envelop"></span></a>
           </li>
         </ul>
       </div>
