--- a/calendar.html
+++ b/calendar.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Hello there, I'm Michael. I am a software engineer.">
-		<title>Calendar | michael-kha.com</title>
-		<link rel="shortcut icon" type="image/jpg" href="static/favicon.ico"/>
-		<link rel="stylesheet" type="text/css" href="static/css/style.css">
-		<link rel="dns-prefetch" href="//fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap" rel="stylesheet">
-	</head>
-	<body>
-		<div class="page-container">
-			<div class="calendar">
-				<h2>Calendar</h2>
-				<p><a href="mailto:contact@michael-kha.com">Email</a> to schedule an appointment.</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hello there, I'm Michael. I am a software engineer.">
+    <title>Calendar | michael-kha.com</title>
+    <link rel="shortcut icon" type="image/jpg" href="static/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="page-container">
+      <div class="calendar">
+        <h2>Calendar</h2>
+        <p><a href="mailto:contact@michael-kha.com">Email</a> to schedule an appointment.</p>
 				<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=bXhrNTAyNUBnLnJpdC5lZHU&amp;color=%23039BE5&amp;showTitle=0&amp;showPrint=0&amp;showDate=1&amp;showNav=1&amp;showTabs=0&amp;showCalendars=0&amp;showTz=1" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-			</div>
-		</div>
-	</body>
+      </div>
+    </div>
+  </body>
 </html>
