--- a/calendar.html
+++ b/calendar.html
@@ -17,8 +17,6 @@
       <div class="calendar">
         <h2>Calendar</h2>
         <p><a href="mailto:contact@michael-kha.com">Email</a> to schedule an appointment.</p>
-				<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=bXhrNTAyNUBnLnJpdC5lZHU&amp;color=%23039BE5&amp;showTitle=0&amp;showPrint=0&amp;showDate=1&amp;showNav=1&amp;showTabs=0&amp;showCalendars=0&amp;showTz=1" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-      </div>
-    </div>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=bXhrNTAyNUBnLnJpdC5lZHU&amp;src=Y19sb3I0NWo5aTNzMDl1YjA5anFiYTNndDVhY0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%23F4511E&amp;showNav=1&amp;showTabs=1&amp;showPrint=0&amp;showCalendars=1" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>    </div>
   </body>
 </html>
