--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hello there, I'm Michael. I am a software engineer.">
-    <title>Calendar | michael-kha.com</title>
+    <title>Calendar | Michael Kha</title>
     <link rel="shortcut icon" type="image/jpg" href="static/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -16,7 +16,7 @@
     <div class="page-container">
       <div class="calendar">
         <h2>Calendar</h2>
-        <p><a href="mailto:contact@michael-kha.com">Email</a> to schedule an appointment.</p>
+        <p><a href="mailto:mcalkha@gmail.com">Email</a> to schedule an appointment.</p>
         <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=bXhrNTAyNUBnLnJpdC5lZHU&amp;src=Y19sb3I0NWo5aTNzMDl1YjA5anFiYTNndDVhY0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%23F4511E&amp;showNav=1&amp;showTabs=1&amp;showPrint=0&amp;showCalendars=1" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>    </div>
   </body>
 </html>
