--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <ul>
           <li>
-            <a href="https://github.com/mxk5025" rel="noopener noreferrer" target="_blank" title="GitHub"><span class="icon icon-github">&#xeab0;</span></a>
+            <a href="https://github.com/mchaelkha" rel="noopener noreferrer" target="_blank" title="GitHub"><span class="icon icon-github">&#xeab0;</span></a>
           </li>
           <li>
             <a href="https://medium.com/@mkha" rel="noopener noreferrer" target="_blank" title="Medium"><span class="icon icon-medium">&#xe900;</span></a>
@@ -41,7 +41,7 @@
             <a href="./calendar.html" title="Calendar"><span class="icon icon-calendar">&#xe953;</span></a>
           </li>
           <li>
-            <a href="mailto:contact@michael-kha.com" title="Email"><span class="icon icon-envelop">&#xe945;</span></a>
+            <a href="mailto:mchaelkha@gmail.com" title="Email"><span class="icon icon-envelop">&#xe945;</span></a>
           </li>
         </ul>
       </div>
