--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
           <h1>Full stack software engineer.</h1>
         </div>
         <div class="info-desc">
-          <p>Software engineer focused on system design and architecture on the cloud.</p>
-          <p>Previously worked on enterprise systems, product development, and infrastructure.</p>
-          <p>Pursuing full-stack, cloud/platform infrastructure, and DevOps engineering positions.</p>
+          <p>Software engineer with full-stack experience. Focused on system design and architecture on the cloud.</p>
         </div>
         <ul>
           <li>
