--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1>Full stack software engineer.</h1>
         </div>
         <div class="info-desc">
-          <p>Software engineer with full-stack experience. Focused on system design and cloud-native architecture.</p>
+          <p>Focused on system design and cloud-native architecture.</p>
         </div>
         <ul>
           <li>
