--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
           <li>
             <a href="https://www.linkedin.com/in/michaelkha" rel="noopener noreferrer" target="_blank" title="LinkedIn"><span class="icon icon-linkedin">&#xeac9;</span></a>
           </li>
+          <!--
           <li>
             <a href="https://michael-kha-site.s3.us-east-1.amazonaws.com/Michael_Kha_Resume.pdf" rel="noopener noreferrer" target="_blank" title="Resume"><span class="icon icon-profile">&#xe923;</span></a>
           </li>
+          -->
           <li>
             <a href="./calendar.html" title="Calendar"><span class="icon icon-calendar">&#xe953;</span></a>
           </li>
           <li>
-            <a href="mailto:mchaelkha@gmail.com" title="Email"><span class="icon icon-envelop">&#xe945;</span></a>
+            <a href="mailto:contact@mchaelkha.com" title="Email"><span class="icon icon-envelop">&#xe945;</span></a>
           </li>
         </ul>
       </div>
