--- a/resume.html
+++ b/resume.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <div class="page-container">
-      <div class="calendar">
-        <h2>Calendar</h2>
-        <p><a href="mailto:contact@mchaelkha.com">Email</a> to schedule an appointment.</p>
-        <iframe src="https://calendar.google.com/calendar/embed?src=mchaelkha%40gmail.com&ctz=America%2FChicago" frameborder="0" scrolling="no"></iframe>
+      <div class="resume">
+        <h2>Resume</h2>
+        <p><i>Last updated on 7/3/2023.</i></p>
+        <iframe src="./static/files/resume.pdf" frameborder="0" scrolling="no"></iframe>
   </body>
 </html>
