Update html files

--- a/calendar.html
+++ b/calendar.html
@@ -18,5 +18,7 @@
         <h2>Calendar</h2>
         <p><a href="mailto:contact@mchaelkha.com">Email</a> to schedule an appointment.</p>
         <iframe src="https://calendar.google.com/calendar/embed?src=mchaelkha%40gmail.com&ctz=America%2FChicago" frameborder="0" scrolling="no"></iframe>
+      </div>
+    </div>
   </body>
 </html>
