--- a/resume.html
+++ b/resume.html
@@ -18,5 +18,7 @@
         <h2>Resume</h2>
         <p><i>Last updated on 7/3/2023.</i></p>
         <iframe src="./static/files/resume.pdf" frameborder="0" scrolling="no"></iframe>
+      </div>
+    </div>
   </body>
 </html>
