--- a/now_playing.html
+++ b/now_playing.html
@@ -22,7 +22,7 @@
       }, 120000);
 
       function reloadIFrame() {
-          document.querySelector('iframe').contentWindow.location.reload();
+          document.querySelector('iframe').src += '';
       }
     </script>
   </body>
