--- a/now_playing.html
+++ b/now_playing.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <iframe src="https://spotify-now-playing-one-omega.vercel.app/now-playing" style="border:1px #000000 solid;background:palegoldenrod;"
-        name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="auto"
-        width="auto" allowfullscreen></iframe>
+        name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="64px"
+        width="256px" allowfullscreen></iframe>
     <script>
       window.setInterval(function () {
           reloadIFrame()
